# Avarta

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  dev-server.py  parameters.md  scope.md
.github/workflows/: ci.yml  deploy.yml
crates/avarta-core/: Cargo.toml
crates/avarta-core/src/: geometry.rs  idcodec.rs  lib.rs  mesh.rs  noise.rs  params.rs  pigment.rs
crates/avarta-wasm/: Cargo.toml
crates/avarta-wasm/src/: lib.rs
crates/shell-core/: Cargo.toml
crates/shell-core/src/: lib.rs
crates/shell-wasm/: Cargo.toml
crates/shell-wasm/src/: lib.rs
harness/: .gitignore  README.md  extract_mesh.mjs  fetch_references.py  render_catalog.py  requirements.txt  species.json
web/: avarta-viewer.js  index.html  package-lock.json  package.json  shell-viewer.js  vite.config.js
